# empyrical_plus

./: .gitignore  AGENTS.md  DESIGN.md  README.md  RUST_MIGRATION.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
empyrical_plus/: __init__.py  _version.py  perf_attrib.py  periods.py  stats.py  utils.py
tests/: test_import.py  test_perf_attrib.py  test_stats.py  test_version.py
