[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsf-empyrical"
version = "1.0.2"
description = "Empyrical analysis tools box for statistics"
readme = "README.md"
license = "MIT"
authors = [
    {name = "msliu98", email = "mingshuoliu98@163.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "scipy",
]

[project.optional-dependencies]
test = [
    "parameterized",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/msliu98/empyrical_plus"

[tool.setuptools]
packages = ["empyrical_plus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
